# alphax_crm

./: .gitignore  MANIFEST.in  README.md  license.txt  pyproject.toml  requirements.txt  setup.py
alphax_crm/: hooks.py  modules.txt  patches.txt
alphax_crm/alphax_crm/doctype/alphax_crm_settings/: alphax_crm_settings.json  alphax_crm_settings.py
alphax_crm/alphax_crm/doctype/alphax_data_quality_rule/: alphax_data_quality_rule.json  alphax_data_quality_rule.py
alphax_crm/alphax_crm/doctype/alphax_lead_score_rule/: alphax_lead_score_rule.json  alphax_lead_score_rule.py
alphax_crm/alphax_crm/doctype/alphax_prospect/: alphax_prospect.js  alphax_prospect.json  alphax_prospect.py  alphax_prospect_list.js
alphax_crm/alphax_crm/workspace/alphax_crm/: alphax_crm.json
alphax_crm/api/: ai.py  lead_import.py  lead_intake.py  prospect.py  whatsapp.py
alphax_crm/config/: desktop.py
alphax_crm/crm/: activity.py  data_quality.py  lead.py  opportunity.py  tasks.py  utils.py
alphax_crm/patches/v0_1/: install_defaults.py
alphax_crm/patches/v0_2/: add_whatsapp.py
alphax_crm/patches/v0_3/: add_data_quality.py
alphax_crm/public/js/: lead.js  opportunity.js
alphax_crm/setup/: install.py
