[project]
name = "alphax_crm"
authors = [{ name = "Neotec Integrated Solutions", email = "support@neotec.ai" }]
description = "Compliance-grade CRM automation for AlphaX on Frappe/ERPNext."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
erpnext = ">=15.0.0,<16.0.0"
